--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^7.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "mongoose": "^5.4.20",
     "nodemon": "^1.18.10"
   }
